--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,18 +13,20 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.0",
+    "mysql2": "^3.14.1",
+    "openai": "^4.98.0",
+    "sequelize": "^6.37.7",
     "turbo": "^2.5.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.10.5",
     "eslint": "^8.56.0",
     "ts-node-dev": "^2.0.0",
