--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,24 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@azure/identity": "^3.3.0",
+    "@types/parse-json": "^4.0.2",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
-    "uuid": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.510.0",
+    "next": "^15.3.2",
+    "parse-json": "^8.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "@azure/identity": "^3.3.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.0",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.3.3"
   }
 }
