--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: web-app
-          path: apps/web/.next
+          path: apps/web
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,10 +51,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: web-app
+          path: web
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'unityVoice-web'
           slot-name: 'Production'
-          package: .
+          package: ./web
