--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -51,11 +51,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: web-app
-          path: web
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'unityVoice-web'
           slot-name: 'Production'
-          package: ./web
+          package: apps/web
