--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Set environment variables (NEXT_PUBLIC_API_URL)
+        run: echo "NEXT_PUBLIC_API_URL=https://unity-voice-plan.azurewebsites.net/api" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: npm install
 
@@ -32,7 +35,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: web-app
-          path: apps/web
+          path: |
+            apps/web/.next/standalone
+            apps/web/.next/static
+            apps/web/public
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,6 +61,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'unityVoice-web'
+          app-name: 'unity-voice-plan'
           slot-name: 'Production'
-          package: apps/web
+          package: .
