--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.510.0",
+    "mysql2": "^3.14.1",
     "next": "^15.1.8",
     "parse-json": "^8.3.0",
     "react": "^19.1.0",
